1998-12-15  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/menus.c (MenuInteraction):
	(FPopupMenu): fixed last patch (mrDynamicPrev not set, menu not popped
	down when an item is selected)

	* fvwm/menus.c:
	(do_menu):
	(MenuInteraction):
	(PopDownMenu): Fixed bug: A menu containing itself as a 'Popup' was
	unmapped when the popup item was entered and left. Fixed this by
	introducing a new parameter to PopDownMenu: a MenuRoot to search for
	mrPopup before actually popping down.

1998-12-14  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/events.c (HandleConfigureRequest): added ' - Tmp_win->bw' that
	caused wandering FvwmBorder windows

1998-12-14  Dominik Vogt  <dominik_vogt@hp.com>

	* configure.in: Changed version to 2.1.4.
	* NEWS: Ditto.

	Released fvwm 2.1.3 beta (CVS tag version-2_1_3).

1998-12-13  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/read.c (ReadSubFunc): the piperead string was set as the last
	read filename

	* fvwm/module.c (executeModule): removed useless code:
	  if(args[nargs] != NULL)
	    free(args[nargs]);
	when args[nargs] is guaranteed to be NULL

	* fvwm/fvwm.c (SetRCDefaults): added missing comma after "SetMenuStyle"
	default

	* fvwm/builtins.c (SetMenuStyle):
	* fvwm/fvwm2.1: removed SetMenuStyle ... next. The menuface option can
	be applied to any menu style. I don't understand what this was good for
	anyway since when you specified 'next', the menu style itself
	(mwm/fvwm/win) was undefined.

	* fvwm/builtins.c (SetMenuStyle1): removed unused code

	* fvwm/misc.h: changed signature of DisplaySize

	* fvwm/events.c (HandleConfigureRequest):
	* fvwm/add_window.c (AddWindow): changed signature of ConstrainSize

	* fvwm/resize.c: made statics orig... and drag..., xmotion, ymotion
	parameters to DoResize/ConstrainSize, moved static globals last_...
	into DisplaySize and introduced a parameter to reset them.

	* fvwm/misc.h: removed DoResize from header file (this cannot be safely
	called from outside resize.c!)

	* fvwm/add_window.c: